--- a/xprof/interval.c.erb
+++ b/xprof/interval.c.erb
@@ -97,7 +97,7 @@ bt_component_class_initialize_method_status <%= namespace %>_dispatch_initialize
     dispatch->traffic_event_class = create_lttng_traffic_event_class_message(trace_class, stream_class);
     dispatch->device_name_event_class = create_lttng_device_name_event_class_message(trace_class, stream_class);
     dispatch->frequency_event_class = create_lttng_frequency_event_class_message(trace_class, stream_class);
-    dispatch->energy_event_class = create_lttng_energy_event_class_message(trace_class, stream_class);
+    dispatch->power_event_class = create_lttng_power_event_class_message(trace_class, stream_class);
 
     /* Create a default trace from (instance of `trace_class`) */
     bt_trace *trace = bt_trace_create(trace_class);
