Squashed sampling commits.

--- a/xprof/interval.h.erb
+++ b/xprof/interval.h.erb
@@ -56,7 +56,8 @@ struct <%= namespace %>_dispatch {
     bt_event_class *device_event_class;
     bt_event_class *traffic_event_class;
     bt_event_class *device_name_event_class;
-
+    bt_event_class *frequency_event_class;
+    bt_event_class *power_event_class;
     /* Component's input port (weak) */
     bt_self_component_port_input *in_port;
 };
