--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -124,6 +124,52 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      state->downstream_message_queue.push(message);
 }
 
+static void create_and_enqueue_computeEU_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id,
+                                                 const uintptr_t hDevice, const uint32_t subDevice, const uint64_t activeTime, const uint64_t ts) {
+     zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
+     auto [it, inserted] = state->device_computeEngine_ref.insert({{hostname, process_id, hDevice, subDevice}, {activeTime, ts}});
+     // First entry
+     if (inserted)
+            return;
+
+     auto &[prev_activeTime, prev_ts] = it->second;
+
+     bt_message *message = create_computeEU_message(hostname, process_id,
+                            thread_id, hDevice, subDevice,
+                            static_cast<uint64_t>(((activeTime - prev_activeTime) / static_cast<double>(ts-prev_ts))*100000.0),
+                            prev_ts,
+                            zeinterval_iter_g->dispatch->computeEU_event_class,
+                            zeinterval_self_message_iterator_g,
+                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
+     state->downstream_message_queue.push(message);
+     prev_activeTime = activeTime;
+     prev_ts = ts;
+}
+
+static void create_and_enqueue_copyEU_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id,
+                                                 const uintptr_t hDevice, const uint32_t subDevice, const uint64_t activeTime, const uint64_t ts) {
+     zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
+     auto [it, inserted] = state->device_copyEngine_ref.insert({{hostname, process_id, hDevice, subDevice}, {activeTime, ts}});
+     // First entry
+     if (inserted)
+            return;
+
+     auto &[prev_activeTime, prev_ts] = it->second;
+
+     bt_message *message = create_copyEU_message(hostname, process_id,
+                            thread_id, hDevice, subDevice,
+                            static_cast<uint64_t>(((activeTime-prev_activeTime) / static_cast<double>(ts-prev_ts))*100000.0),
+                            prev_ts,
+                            zeinterval_iter_g->dispatch->copyEU_event_class,
+                            zeinterval_self_message_iterator_g,
+                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
+     state->downstream_message_queue.push(message);
+     prev_activeTime = activeTime;
+     prev_ts = ts;
+}
+
+
+
 static void create_and_enqueue_device_message(
         const char* hostname, const process_id_t process_id, const thread_id_t thread_id, thapi_device_id device,
         const char* commandname, const char* metadata,
@@ -293,6 +339,20 @@ static void zeinterval_<%= dbt_event.name %>_callback(
      int64_t ns_from_origin;
      bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
      create_and_enqueue_frequency_message(hostname.c_str(), process_id, thread_id, (uintptr_t)hDevice, domain, ns_from_origin, frequency);
+  <% elsif dbt_event.name_unsanitized == "lttng_ust_ze_sampling:computeEngine" %>
+     const hostname_t   hostname   = borrow_hostname(bt_evt);
+     const process_id_t process_id = 0;
+     const thread_id_t  thread_id = 0;
+     int64_t ns_from_origin;
+     bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
+     create_and_enqueue_computeEU_message(hostname.c_str(), process_id, thread_id, (uintptr_t)hDevice, subDevice, activeTime, ns_from_origin);
+  <% elsif dbt_event.name_unsanitized == "lttng_ust_ze_sampling:copyEngine" %>
+     const hostname_t   hostname   = borrow_hostname(bt_evt);
+     const process_id_t process_id = 0;
+     const thread_id_t  thread_id = 0;
+     int64_t ns_from_origin;
+     bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
+     create_and_enqueue_copyEU_message(hostname.c_str(), process_id, thread_id, (uintptr_t)hDevice, subDevice, activeTime, ns_from_origin);
   <% elsif dbt_event.name_unsanitized.start_with?('lttng_ust_ze:')  or
            dbt_event.name_unsanitized.start_with?('lttng_ust_zet:') or
            dbt_event.name_unsanitized.start_with?('lttng_ust_zes:') or
