Fix tests one more time

--- a/utils/tests_template/interval_profiling_normal.yaml.erb
+++ b/utils/tests_template/interval_profiling_normal.yaml.erb
@@ -81,6 +81,11 @@ ref:
   - :name: lttng:device
     :common_context:
       hostname: aurora12.gov
+<% if be == "ze" %>
+      backend: <%= backend %>
+<% else %>
+      backend: 0
+<% end %>
     :payload:
       name: <%= profiled_call %>
       dur: <%= 10 * mulfactor %>
