cuda btx: test updates
- device events now have correct backend
- we don'd handle profiling results event before initial profiling
  event, so don't run that test for cuda

--- a/utils/tests_template/interval_profiling_normal.yaml.erb
+++ b/utils/tests_template/interval_profiling_normal.yaml.erb
@@ -81,7 +81,7 @@ ref:
   - :name: lttng:device
     :common_context:
       hostname: aurora12.gov
-<% if be == "ze" %>
+<% if ["ze", "cuda"].include?(be) %>
       backend: <%= backend %>
 <% else %>
       backend: 0
