refactor new tests
- change name and simplify cuda specific tests
- enable multi-thread test for ze backend

--- a/utils/tests_template/interval_profiling_kernel_name.yaml.erb
+++ b/utils/tests_template/interval_profiling_kernel_name.yaml.erb
@@ -5,12 +5,14 @@
      mulfactor = 1
      profiled_call = "clEnqueueSVMFree"
      backend = 2
+     kernel_function_name = "solver"
    when "ze"
      event = "hEvent"
      prof_end = "globalEnd"
      mulfactor = 1
      profiled_call = "zeCommandListAppendBarrier"
      backend = 1
+     kernel_function_name = "solver"
    when "cuda"
      event = "hStop"
      prof_end = "milliseconds"
