cuda btx: fix cuda set current null case
acts like pop when setting a null context. Also update tests to use
a non-zero context (zero is equal to nullptr).

--- a/utils/tests_template/interval_profiling_multithread.yaml.erb
+++ b/utils/tests_template/interval_profiling_multithread.yaml.erb
@@ -44,6 +44,8 @@ in:
     :common_context:
       vtid: 1
   - :name: lttng_ust_cuda:cuCtxSetCurrent_entry
+    :payload:
+      ctx: 1
     :common_context:
       vtid: 1
   - :name: lttng_ust_cuda:cuCtxSetCurrent_exit
